Added a custom font for my h1 element.

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ a:hover {
 h1 {
   color: green;
   font-size: 3rem;
-  font-family: Georgia, serif;
+  font-family: 'Arapey', 'serif';
 }
 
 .Cannabis {
